# i4h-workflows

./: .gitignore  .markdownlint.yaml  .pre-commit-config.yaml  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  README.md  i4h
.github/: check_missing_license.sh  markdown-link-check.json  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug-report.md
.github/workflows/: blossom-ci.yml  copyright.yml
tools/: README.md  env_setup_robot_surgery.sh  env_setup_robot_us.sh  env_setup_so_arm_starter.sh  run_all_tests.py
tools/env_setup/: bash_utils.sh  install_gr00tn1.sh  install_gr00tn15.sh  install_isaacsim5.0_isaaclab2.2.sh  install_isaacsim5.1_isaaclab2.3.sh  install_lerobot.sh  install_pi0.sh  install_raysim.sh  install_vlm_surgical_agent_fx.sh
tools/env_setup/patches/: gr00t_policy_padding_dropout.patch  isaaclab_arena_wbc_multi_env.patch  leisaac_hdf5_cuda_fix.patch
workflows/: CMakeLists.txt
workflows/rheo/: README.md
workflows/rheo/agents/agents/: __init__.py  peri_op_annotation_agent.py  peri_op_chat_agent.py  push_cart_monitor_agent.py  robot_control_agent.py  tray_picknplace_monitor_agent.py  user_command_agent.py
workflows/rheo/agents/configs/: global.yaml  operating_room_selector.yaml  peri_op_annotation_agent.yaml  peri_op_chat_agent.yaml  push_cart_monitor_agent.yaml  robot_control_agent.yaml  tray_picknplace_monitor_agent.yaml  user_command_agent.yaml
workflows/rheo/docker/: Dockerfile.x86  run_docker.sh
workflows/rheo/docs/: assemble_trocar_finetuning.md  assemble_trocar_rl_guide.md  locomanip_finetuning.md
workflows/rheo/scripts/config/: g1_assemble_trocar_dataset.yaml  g1_gr00t_closedloop_pick_and_place_config.yaml  g1_gr00t_closedloop_push_cart_config.yaml  g1_locomanip_dataset_config.yaml
workflows/rheo/scripts/policy/: __init__.py  apply_gr00t_rl_patch.py  gr00t_config.py  gr00t_locomanip_config.py
workflows/rheo/scripts/simulation/: __init__.py  annotate_demos.py  generate_dataset.py  gr00t_closedloop_policy.py  merge_demos.py  record_demos_assemble_trocar.py  record_demos_locomanip.py  register_and_patch.py  replay_demos.py
workflows/rheo/scripts/teleop_devices/: keyboard_23d_adapter.py  motion_controllers.py
workflows/rheo/scripts/utils/: assemble_trocar_lerobot_fields.py  convert_hdf5_to_lerobot.py  joint_conversion.py  (+5 more)
workflows/rheo/tests/: helpers.py
workflows/robotic_surgery/: README.md  metadata.json
workflows/robotic_surgery/docker/: Dockerfile  README.md
workflows/robotic_ultrasound/: README.md  metadata.json  reset.sh
workflows/robotic_ultrasound/docker/: Dockerfile  README.md
workflows/robotic_ultrasound/scripts/holoscan_ops/operators/clarius_cast/: CMakeLists.txt  clarius_cast.py
workflows/robotic_ultrasound/scripts/holoscan_ops/operators/clarius_solum/: CMakeLists.txt  clarius_solum.py  pysolum.cpp
workflows/robotic_ultrasound/tests/: helpers.py
workflows/so_arm_starter/: CMakeLists.txt  README.md  Sim2Real.md  metadata.json
workflows/so_arm_starter/docker/: Dockerfile  README.md  dgx.Dockerfile  orin.Dockerfile  orin.patch
workflows/so_arm_starter/scripts/: util.py
workflows/so_arm_starter/scripts/dds/: README.md
workflows/so_arm_starter/scripts/dds/schemas/: README.md
workflows/so_arm_starter/scripts/holoscan_apps/: gr00t_inference_app.py  soarm_robot_config.yaml
workflows/so_arm_starter/scripts/policy/: README.md  run_policy.py
workflows/so_arm_starter/scripts/policy/gr00tn1_5/: runners.py
workflows/so_arm_starter/scripts/policy/gr00tn1_5/trt/: action_head_utils.py  benchmark.py  build_engine.sh  export_onnx.py  trt_model_forward.py  trt_torch.py
workflows/so_arm_starter/scripts/simulation/: README.md
workflows/so_arm_starter/scripts/simulation/environments/: README.md  replay_recording.py  teleoperation_record.py
workflows/so_arm_starter/scripts/simulation/exts/so_arm_starter_ext/: README.md
workflows/so_arm_starter/scripts/simulation/exts/so_arm_starter_ext/docs/: CHANGELOG.md
workflows/so_arm_starter/scripts/simulation/exts/so_arm_starter_ext/so_arm_starter_ext/tasks/so_arm_starter/approach/config/soarm101/: so_arm_env_cfg.py
workflows/so_arm_starter/scripts/simulation/utils/: assets.py
workflows/so_arm_starter/scripts/training/: hdf5_to_lerobot.py
workflows/so_arm_starter/scripts/training/gr00t_n1_5/: README.md
workflows/so_arm_starter/tests/: CMakeLists.txt  helpers.py
workflows/so_arm_starter/tests/test_holoscan_apps/: test_gr00t_inference_app.py
workflows/so_arm_starter/tests/test_simulation/: test_exts.py  test_replay.py  test_teleoperate_record.py
workflows/telesurgery/: README.md  requirements.cu12.txt  requirements.cu13.txt
workflows/telesurgery/benchmarking/: telesurgery_latency_benchmarking.md
workflows/telesurgery/docker/: Dockerfile  Dockerfile.sim  real.sh  sim.sh  utils.sh
workflows/telesurgery/scripts/: env.sh  yuan_hsb_holoscan311.patch
workflows/telesurgery/scripts/holohub/operators/: .gitignore  CMakeLists.txt  build.sh  clean.sh  stats.py
workflows/telesurgery/scripts/holohub/operators/camera/: cv2.py
workflows/telesurgery/scripts/holohub/operators/camera/aja_source/: .gitignore  CMakeLists.txt
workflows/telesurgery/scripts/holohub/operators/nvidia_video_codec/: .gitignore  CMakeLists.txt
workflows/telesurgery/scripts/holohub/operators/nvidia_video_codec/utils/: camera_stream_merge.py
workflows/telesurgery/scripts/holohub/operators/streamlift/: .gitignore  CMakeLists.txt  utils.py
workflows/telesurgery/scripts/holohub/operators/streamlift/common/: cuda_helper.h
workflows/telesurgery/scripts/holohub/operators/streamlift/down_sampling/: CMakeLists.txt  down_sampler.cpp  down_sampler.hpp  metadata.json
workflows/telesurgery/scripts/holohub/operators/streamlift/down_sampling/python/: CMakeLists.txt  app.py  down_sampler.cpp  down_sampler_pydoc.hpp
workflows/telesurgery/scripts/holohub/operators/streamlift/up_sampling/: CMakeLists.txt  metadata.json  up_sampler.cpp  up_sampler.hpp
workflows/telesurgery/scripts/holohub/operators/streamlift/up_sampling/python/: CMakeLists.txt  app.py  up_sampler.cpp  up_sampler_pydoc.hpp
(+113 files in other folders)
