# SPDX-FileCopyrightText: Copyright (c) 2025 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
# SPDX-License-Identifier: Apache-2.0
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
# http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

cmake_minimum_required(VERSION 3.18)
project(telesurgery_holohub)

set(HOLOHUB_PYTHON_MODULE_OUT_DIR ${CMAKE_BINARY_DIR}/python/lib/holohub)
execute_process(COMMAND chmod -R 755 ${CMAKE_BINARY_DIR})
file(MAKE_DIRECTORY ${HOLOHUB_PYTHON_MODULE_OUT_DIR})

# depends on holohub/cmake and operator_util.hpp for pybinding (Remove this in future)
set(HOLOHUB_DIR /opt/nvidia/holohub)
list(APPEND CMAKE_MODULE_PATH ${HOLOHUB_DIR}/cmake)
list(APPEND CMAKE_MODULE_PATH ${HOLOHUB_DIR}/cmake/modules)
list(APPEND CMAKE_MODULE_PATH ${HOLOHUB_DIR}/cmake/deps)
include_directories(${HOLOHUB_DIR}/operators)

find_package(holoscan REQUIRED CONFIG PATHS "/opt/nvidia/holoscan")

add_subdirectory(streamlift)

# install
install(
    DIRECTORY "${HOLOHUB_PYTHON_MODULE_OUT_DIR}"
    DESTINATION python/lib
    FILE_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
    DIRECTORY_PERMISSIONS OWNER_READ OWNER_WRITE OWNER_EXECUTE GROUP_READ GROUP_EXECUTE WORLD_READ WORLD_EXECUTE
    PATTERN "__pycache__" EXCLUDE
)
